# programmiersprachen-aufgabe-1

./: gitignore
source/: CMakeLists.txt  binomial.cpp  checksum.cpp  cylinder.cpp  factorial.cpp  fract.cpp  is_prime.cpp  kgv.cpp  mileToKilometer.cpp  sumMultiples.cpp  tests.cpp  zylinder.hpp
