add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_fancy_library)

add_executable(tests tests.cpp)

add_executable(sumMultiples sumMultiples.cpp)

add_executable(factorial factorial.cpp)

add_executable(binomial binomial.cpp)

add_executable(cylinder cylinder.cpp)

add_executable(fract fract.cpp)

add_executable(is_prime is_prime.cpp)

add_executable(kgv kgv.cpp)

add_executable(mileToKilometer mileToKilometer.cpp)

add_executable(checksum checksum.cpp)